objects/B__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A</label>
        <referenceTo>A__c</referenceTo>
        <relationshipLabel>B</relationshipLabel>
        <relationshipName>B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B_One__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>B One</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C</label>
        <referenceTo>C__c</referenceTo>
        <relationshipLabel>B</relationshipLabel>
        <relationshipName>B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NewEmail</label>
        <type>Email</type>
    </fields>
</CustomObject>